<resources>
    <string name="app_name">Inventory App</string>
    <string name="empty_view_title_text">There are no available products in the store</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="group_title_product">Product</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="title_category_supplier">Supplier</string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_supplier_phone_number">Phone number</string>
    <string name="product_details">Product Details</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>
    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product saved successfully</string>
    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that opens the current product editor [CHAR LIMIT=20] -->
    <string name="action_edit">Edit</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <string name="list_item_available_quantity">Available %d</string>
    <string name="details_group_title_supplier">Supplier</string>
    <string name="remove_product_image">Remove Product Image</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="button_tittle_sale">Sale</string>
    <string name="phone_number">Phone Number</string>
    <string name="error_product_quantity_required">Product requires valid quantity</string>
    <string name="error_product_price_required">Product requires a valid price</string>
    <string name="error_product_name_required">Product requires a name</string>
    <string name="error_supplier_name_required">Product requires a supplier name</string>
    <string name="error_supplier_phone_number_required">Product requires a supplier phone number</string>
    <string name="product_image">Product Image</string>
</resources>
