<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.editor.ProductEditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/CategoryLabelStyle"
            android:text="@string/group_title_product" />

        <ImageView
            android:id="@+id/edit_product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/button_remove_product_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/remove_product_image" />

        <TextView
            style="@style/FieldLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/edit_product_name"
            style="@style/FieldValueEditorStyle"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords"
            tools:text="@sample/products.json/data/productName" />

        <TextView
            style="@style/FieldLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <EditText
            android:id="@+id/edit_product_price"
            style="@style/FieldValueEditorStyle"
            android:hint="@string/hint_product_price"
            android:inputType="numberDecimal"
            tools:text="@sample/products.json/data/price" />

        <TextView
            style="@style/FieldLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity" />

        <EditText
            android:id="@+id/edit_product_quantity"
            style="@style/FieldValueEditorStyle"
            android:hint="@string/hint_product_quantity"
            android:inputType="number"
            tools:text="@sample/products.json/data/quantity" />

        <TextView
            style="@style/CategoryLabelStyle"
            android:text="@string/title_category_supplier" />

        <TextView
            style="@style/FieldLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/edit_supplier_name"
            style="@style/FieldValueEditorStyle"
            android:hint="@string/hint_supplier_name"
            android:inputType="textCapWords"
            tools:text="@sample/products.json/data/supplierName" />

        <TextView
            style="@style/FieldLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number" />

        <EditText
            android:id="@+id/edit_supplier_phone_number"
            style="@style/FieldValueEditorStyle"
            android:hint="@string/hint_supplier_phone_number"
            android:inputType="phone"
            tools:text="@sample/products.json/data/supplierPhoneNumber" />

    </LinearLayout>
</ScrollView>